--- a/homeConfig/light.yaml
+++ b/homeConfig/light.yaml
@@ -1,35 +1,25 @@
 light:
-  - platform: homeassistant_light_group
+  - platform: homeassistant_component
     id: light_rgb_lights
     entity_id: light.rgb_lights
     name: Color Lights 
-  - platform: homeassistant_light_group
+  - platform: homeassistant_component
     id: light_living_room_lights
     entity_id: light.living_room_lights
     name: Living Room 
-  - platform: homeassistant_light_group
+  - platform: homeassistant_component
     id: light_desk_lamp
     entity_id: light.desk_lamp
     name: Desk Lamp
-  - platform: homeassistant_light_group
+  - platform: homeassistant_component
     id: light_kitchen_lights
     entity_id: light.kitchen_lights
     name: Kitchen
-  - platform: homeassistant_light_group
+  - platform: homeassistant_component
     id: light_bathroom_lights
     entity_id: light.bathroom_lights
     name: Bathroom
-  - platform: homeassistant_light_group
+  - platform: homeassistant_component
     id: light_bedroom_lights
     entity_id: light.bedroom_lights
     name: Bedroom
-
-homeassistant_light_group:
-  id: light_group_component
-  lights:
-    - id: light_rgb_lights
-    - id: light_living_room_lights
-    - id: light_desk_lamp
-    - id: light_kitchen_lights
-    - id: light_bathroom_lights
-    - id: light_bedroom_lights
