--- a/white-homething.yaml
+++ b/white-homething.yaml
@@ -43,7 +43,6 @@ external_components:
       homeassistant_component, 
       homeassistant_switch_group, 
       homeassistant_sensor_group,
-      homeassistant_light_group,
       homeassistant_media_player,
       homeassistant_service_group,
       media_player_source,
@@ -104,6 +103,10 @@ homeThing:
   screens:
     - name: Desk Screen
       entities:
+        # - id: cover_megadesk
+        #   type: cover
+        - type: number
+          id: desk_height_number
         - type: command
           name: "desk nudge up"
           command:
@@ -138,6 +141,15 @@ spi:
   clk_pin: GPIO18
   mosi_pin: GPIO19
 
+number:
+  - platform: homeassistant_component
+    entity_id: number.desk_height_cm
+    name: desk height
+    id: desk_height_number
+    min_value: 61.0
+    max_value: 105.0
+    step: 1
+
 display:
   - platform: st7789v
     model: TTGO_TDisplay_135x240
@@ -150,32 +162,3 @@ display:
     lambda: |-
       id(homeThingMenu)->draw_menu_screen();
       return;
-
-text_sensor:
-  - platform: wifi_info
-    ip_address:
-      name: IP Address
-      internal: True
-      id: wifi_ip
-    ssid:
-      name: SSID
-      internal: True
-      id: wifi_ssid
-
-sensor:
-  - platform: wifi_signal # Reports the WiFi signal strength/RSSI in dB
-    name: "WiFi Signal dB"
-    id: wifi_signal_db
-    update_interval: 60s
-    entity_category: "diagnostic"
-    internal: True
-
-  - platform: copy # Reports the WiFi signal strength in %
-    source_id: wifi_signal_db
-    name: "WiFi Signal %"
-    id: wifi_signal_percent
-    internal: True
-    filters:
-      - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
-    unit_of_measurement: "Signal %"
-    entity_category: "diagnostic"
