--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -36,17 +36,16 @@ external_components:
       path: components
     components: [homeThing]
   - source:
-      type: git
-      url: https://github.com/landonr/esphome-components
-      ref: main
-    refresh: 0s
-      # type: local
-      # path: ../local_components/components
+  #     type: git
+  #     url: https://github.com/landonr/esphome-components
+  #     ref: main
+  #   refresh: 0s
+      type: local
+      path: ../local_components/components
     components: [
       homeassistant_component, 
       homeassistant_switch_group, 
       homeassistant_sensor_group,
-      homeassistant_light_group,
       homeassistant_media_player,
       homeassistant_service_group,
       media_player_source,
@@ -177,7 +176,6 @@ homeThing:
     battery_percent: battery_percent
     charging: connected
   media_player_group: media_group_component
-  light_group: light_group_component
   service_group: service_group_component
   sensor_group: sensor_group_component
   switch_group: switch_group_component
