fix some memory issues, move settings to its own yaml

--- a/homeConfig/media_player.yaml
+++ b/homeConfig/media_player.yaml
@@ -61,14 +61,14 @@ media_player:
     sources:
       - id: youtube_videos
         type: custom
-  - platform: homeassistant_media_player
-    name: Spotify
-    entity_id: "media_player.spotify_landorghini"
-    id: media_player_spotify
-    type: speaker
-    sources:
-      - id: spotty
-        type: spotify
+  # - platform: homeassistant_media_player
+  #   name: Spotify
+  #   entity_id: "media_player.spotify_landorghini"
+  #   id: media_player_spotify
+  #   type: speaker
+  #   sources:
+  #     - id: spotty
+  #       type: spotify
   # - platform: homeassistant_media_player
   #   name: PC
   #   entity_id: "media_player.tower"
@@ -91,8 +91,8 @@ homeassistant_media_player:
       type: roku
     - id: media_player_kitchen
       type: speaker
-    - id: media_player_spotify
-      type: speaker
+    # - id: media_player_spotify
+    #   type: speaker
     # - id: media_player_tower
     #   type: speaker
     # - id: media_player_kodi
