--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -43,11 +43,8 @@ external_components:
       # type: local
       # path: ../local_components/components
     components: [
-      homeassistant_component, 
-      homeassistant_switch_group, 
-      homeassistant_sensor_group,
+      homeassistant_component,
       homeassistant_media_player,
-      homeassistant_service_group,
       media_player_source,
       media_player_source_sonos,
       media_player_source_spotify,
@@ -60,9 +57,9 @@ packages:
   home_text_sensor: !include homeConfig/text_sensor.yaml
   home_light: !include homeConfig/light.yaml
   home_switch: !include homeConfig/switch.yaml
-  menu_group: !include homeConfig/services.yaml
   fonts: !include common/fonts.yaml
   icon_fonts: !include common/icon_fonts.yaml
+  settings: !include common/settings.yaml
 
 substitutions:
   friendly_name: "homeThingFireRemote"
@@ -166,6 +163,12 @@ spi:
   mosi_pin: 23
   miso_pin: 19
 
+cover:
+  - platform: homeassistant_component
+    entity_id: "cover.megadesk_cover"
+    name: "Megadesk"
+    id: cover_megadesk
+
 homeThing:
   id: homeThingMenu
   settings:
@@ -176,9 +179,6 @@ homeThing:
     battery_percent: battery_percent
     charging: connected
   media_player_group: media_group_component
-  service_group: service_group_component
-  sensor_group: sensor_group_component
-  switch_group: switch_group_component
   display: my_display
   on_redraw:
     then:
@@ -202,6 +202,42 @@ homeThing:
     dark_mode: true
     draw_volume_level: false
     draw_header_time: true
+  screens:
+    - name: Desk Screen
+      entities:
+        - type: cover
+          id: cover_megadesk
+        - type: command
+          name: "desk nudge up"
+          command:
+            - homeassistant.service:
+                service: button.press
+                data:
+                  entity_id: "button.desk_position_nudge_up"
+        - type: command
+          name: "desk nudge down"
+          command:
+            - homeassistant.service:
+                service: button.press
+                data:
+                  entity_id: "button.desk_position_nudge_down"
+        - id: light_desk_lamp
+          type: light
+    - name: Settings Screen
+      show_version: True
+      entities:
+        - id: side_light
+          type: light
+        - id: backlight
+          type: light
+        - id: "restart_switch"
+          type: switch
+        - id: wifi_ssid
+          type: text_sensor
+        - id: wifi_signal_percent
+          type: sensor
+        - id: wifi_ip
+          type: text_sensor
 
 display:
   - platform: ili9xxx
