--- a/white-homething.yaml
+++ b/white-homething.yaml
@@ -19,7 +19,7 @@ wifi:
   password: !secret wifi_password
   fast_connect: true
   id: wifi_id
-  # power_save_mode: HIGH
+  power_save_mode: HIGH
 
 external_components:
   - source:
@@ -48,7 +48,7 @@ external_components:
 
 packages:
   device_base: !include common/device_base.yaml
-  settings: !include common/settings.yaml
+  # settings: !include common/settings.yaml
   ipod_control_backlight: !include common/ipod/lilygo_tdisplay_ipod_backlight.yaml
   ipod_control_battery: !include common/ipod/lilygo_tdisplay_ipod_battery.yaml
   ipod_control_binary_sensor: !include common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml
@@ -56,8 +56,9 @@ packages:
   ipod_control_sleep: !include common/ipod/lilygo_tdisplay_ipod_sleep.yaml
   home_media_player: !include homeConfig/media_player.yaml
   home_switch: !include homeConfig/switch.yaml
-  fonts: !include common/fonts.yaml
+  fonts: !include common/fonts-light.yaml
   icon_fonts: !include common/icon_fonts.yaml
+  debug: !include common/debugging.yaml
 
 substitutions:
   friendly_name: "white homething"
@@ -103,7 +104,7 @@ homeThing:
     font_small: small_font
     font_medium: medium_font
     font_large: large_font
-    font_large_heavy: large_heavy_font
+    font_large_heavy: large_font
     font_material_large: material_font_large
     font_material_small: material_font_small
     font_logo: home_thing_logo
@@ -153,19 +154,19 @@ homeThing:
           command:
             - homeassistant.service:
                 service: script.off_script
-    - name: Settings Screen
-      show_version: True
-      entities:
-        - id: backlight
-          type: light
-        - id: "restart_switch"
-          type: switch
-        - id: wifi_ssid
-          type: text_sensor
-        - id: wifi_signal_percent
-          type: sensor
-        - id: wifi_ip
-          type: text_sensor
+    # - name: Settings Screen
+    #   show_version: True
+    #   entities:
+    #     - id: backlight
+    #       type: light
+    #     - id: "restart_switch"
+    #       type: switch
+    #     - id: wifi_ssid
+    #       type: text_sensor
+    #     - id: wifi_signal_percent
+    #       type: sensor
+    #     - id: wifi_ip
+    #       type: text_sensor
 
 spi:
   clk_pin: GPIO18
